Refactor: simplify data handling in `StateChangedListener`, enhance `WhatsappService` error checks, optimize `PdfService` visit list handling, and remove unused methods in `UserService` and `VisitService`.